--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
         "react-addons-css-transition-group": "^15.4.2",
         "react-addons-transition-group": "^15.4.2",
         "react-dom": "^15.4.2",
+        "react-image-gallery": "^0.8.7",
         "react-router-dom": "^4.0.0",
-        "reactstrap": "^5.0.0"
+        "reactstrap": "^5.0.0-beta.3"
     },
     "devDependencies": {
         "babel-core": "^6.24.0",
